// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanCardDialogComponent should render "Authentication Failed" if not authenticating but authentication failed 1`] = `
<WithStyles(Dialog)
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  onClose={[MockFunction]}
  open={false}
>
  <WithStyles(DialogTitle)
    id="alert-dialog-title"
  >
    Sign In
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)
    className="dialog"
  >
    <WithStyles(DialogContentText)
      id="alert-dialog-description"
      variant="body1"
    >
      Authentication Failed
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      color="primary"
      onClick={[MockFunction]}
    >
      Cancel
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ScanCardDialogComponent should render "Please scan your ID card to proceed" if not authenticating 1`] = `
<WithStyles(Dialog)
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  onClose={[MockFunction]}
  open={false}
>
  <WithStyles(DialogTitle)
    id="alert-dialog-title"
  >
    Sign In
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)
    className="dialog"
  >
    <WithStyles(DialogContentText)
      id="alert-dialog-description"
      variant="body1"
    >
      Please scan your ID card to proceed ...
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      color="primary"
      onClick={[MockFunction]}
    >
      Cancel
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ScanCardDialogComponent should render loading component if authenticating 1`] = `
<WithStyles(Dialog)
  disableBackdropClick={true}
  disableEscapeKeyDown={true}
  onClose={[MockFunction]}
  open={false}
>
  <WithStyles(DialogTitle)
    id="alert-dialog-title"
  >
    Sign In
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)
    className="dialog"
  >
    <WithStyles(LoadingComponent)
      size={50}
    />
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Button)
      color="primary"
      onClick={[MockFunction]}
    >
      Cancel
    </WithStyles(Button)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;
